-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2014-05-30	pwessel
	* grdtrack.c:		Did not properly handle the distance units specified in -E.
				Now we pre-scan for units to ensure that only ONE unit is used
				for the various distance options, then apply that unit in the
				distance calculations throughout.  Results will use that unit.
				If no unit is specified we default to km (geographic) or user
				unit (Cartesian).  Also required some changes in gmt_support.c
				Response to forum message # 689.

2014-05-29	pwessel
	* gmt_plot.c:		The length of the map scale bar was incorrectly calculated
				for some oblique projections.  Issue #569.

2014-05-26	pwessel
	* gmt_map.c:		The map region clip path for -JE/e was hardwired to a full
				circle and did not care about -R setting.
				When -R...r and -Je?E was given the search for enclosing
				geographic boundaries failed when either the S or N pole
				was the projection's antipole.
	* gmt_plot.c, pslib.?, pstext.c, psclip.c:	New handling of PSL clipping for quoted text
				lines (contours) and text.  No more different clip off types
				in psclip.

2014-05-20	remko
	* *.[ch]:		Renamed TIME_LANGUAGE to GMT_LANGUAGE. Introduced language-
				dependent names and abbreviations of cardinal points.

2014-05-08	remko
	* gmt_plot.c:		Fix bug in treatment of variable text introduced on 2014-05-04.
				This addresses issue #554.

2014-05-07	pwessel, remko
	* gmt_support.c:	Added support for both variables and constants on both sides
				of the operator in the conditional tests used for custom symbols;
				see issue # 554.
	* gmt_plot.c:		---"---
	* gmt_symbol.h:		___"___

2014-05-04	pwessel
	* gmt_plot.c:		Fix treatment of text and font attributes in custom symbols
	* gmt_support.c:	---"---.  This addresses issue # 553.

2014-04-24	pwessel